--- a/DeLivre/DeLivre/MainPage.xaml
+++ b/DeLivre/DeLivre/MainPage.xaml
@@ -1,14 +1,69 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:DeLivre"
-             x:Class="DeLivre.MainPage">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"       
+             xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
+             x:Class="DeLivre.MainPage" BackgroundImage="Fundob">
 
     <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
+        <StackLayout>
+            <controls:CircleImage Source="logotipo_color.png" Margin="0,5,0,5" 
+                                  HeightRequest="100" 
+                                  HorizontalOptions="CenterAndExpand" 
+                                  BorderColor="White" BorderThickness="1" 
+                                   Aspect="AspectFit"/>
+
+            <Label x:Name="lbCidade"
+                   Text="Qual sua cidade?" 
+                   Margin="5,10,5,0"
+                   FontSize="29"
+                   TextColor="#E53935"
+                   HorizontalOptions="Center"
+                   VerticalOptions="CenterAndExpand" />
+
+            <!--<Button x:Name="btnAracaju"
+                Text="ARACAJU/SE"
+                TextColor="White"
+                BorderRadius="30" 
+                WidthRequest="250"
+                HeightRequest="75"
+                Margin="5,60,5,0" 
+                FontSize="30"
+                Clicked="btnPinhao_Clicked"
+                BackgroundColor="#E53935"
+                HorizontalOptions="Center" 
+                VerticalOptions="Center"/>-->
+            
+
+            <Button x:Name="btnPinhao"
+                Text="PINHÃO/SE"
+                TextColor="White"
+                BorderRadius="30" 
+                WidthRequest="250"
+                HeightRequest="75"
+                Margin="5,60,5,0" 
+                FontSize="30"
+                Clicked="BtnPinhao_Clicked"
+                BackgroundColor="#E53935"
+                HorizontalOptions="Center" 
+                VerticalOptions="Center">
+                <VisualStateManager.VisualStateGroups>
+                    <VisualStateGroup x:Name="CommonStates">
+                        <VisualState x:Name="Normal">
+                            <VisualState.Setters>
+                                <Setter Property="Scale" Value="1"/>
+                            </VisualState.Setters>
+                        </VisualState>
+
+                        <VisualState x:Name="Pressed">
+                            <VisualState.Setters>
+                                <Setter Property="Scale" Value="0.8"/>
+                            </VisualState.Setters>
+                        </VisualState>
+
+                    </VisualStateGroup>
+                </VisualStateManager.VisualStateGroups>
+            </Button>
+        </StackLayout>
     </StackLayout>
 
 </ContentPage>
